Fix bug: 0004032: [Leave] Leave Entitlements & Usage Report:: Numbers should be right aligned - E.g: Leave Entitlement Days

--- a/symfony/web/themes/default/css/main.css
+++ b/symfony/web/themes/default/css/main.css
@@ -975,6 +975,10 @@ table.table th.checkbox-col {
 table.table td.right {
     text-align: right;
 }
+table.table td left {
+    text-align: left;
+}
+
 table tfoot tr.total td {
 	background-color:#555657;
 	color:#fff;
